Working on code coverage